# health-assistant

./: .gitignore  Makefile  README.md  docker-compose.yml  setup.sh
_common/: .env.example
_common/schemas/: diagnosis.py  gp_consultation.py
backend/gateway/: Makefile  config.py  main.py
backend/gateway/routers/: analyses_router.py  appointments_router.py  complaints_router.py  consilium_router.py  devices_router.py  diagnosis_router.py  history_router.py  visits_router.py
backend/gateway/schemas/: appointment_schema.py  complaint_schema.py  diagnosis_schema.py  patient_schema.py  visit_schema.py
backend/gateway/services/: agent_result.py  analysis_service.py  appointment_service.py  complaint_service.py  consilium_service.py  (+3 more)
backend/user_microservice/: Makefile
frontend/: Dockerfile  Makefile  package.json  tailwind.config.ts
frontend/app/: layout.tsx
frontend/contexts/: RoleContext.tsx
frontend/services/: ComplaintService.ts  PatientService.ts  VisitService.ts
frontend/stores/: useAppointmentStore.ts  useComplaintStore.ts  usePatientStore.ts  useVisitStore.ts
frontend/types/: appointment.d.ts  patient.d.ts  visit.d.ts
mcp-agents/apple-health-mcp-agent/: Dockerfile  Makefile  README.md  config.py  example.env  main.py  pyproject.toml
mcp-agents/apple-health-mcp-agent/prompts/: health_metrics_generation.py
mcp-agents/apple-health-mcp-agent/schemas/: health_metrics.py  http.py
mcp-agents/apple-health-mcp-agent/tools/: get_apple_health_metrics.py
mcp-agents/appointment_scheduler_agent/: Makefile
mcp-agents/client_history_agent/: Makefile
mcp-agents/complaint_manager_agent/: main.py
mcp-agents/device_orchestrator_agent/: main.py
mcp-agents/doctors_agent/: Makefile  config.py  example.env
mcp-agents/gp_synthesis_agent/: Makefile  README.md  config.py  example.env  main.py  pyproject.toml
mcp-agents/gp_synthesis_agent/prompts/: gp_synthesis.md
mcp-agents/gp_synthesis_agent/schemas/: consultation.py  http.py
mcp-agents/gp_synthesis_agent/services/: consilium_client.py  synthesis_service.py
mcp-agents/labs_agent/: Makefile
mcp-agents/master_orchestrator_agent/: config.py
mcp-agents/medical_consilium_agent/: Makefile  example.env  main.py
mcp-agents/oura-ring-mcp-agent/: Dockerfile  Makefile  README.md  config.py  example.env  main.py  pyproject.toml
mcp-agents/oura-ring-mcp-agent/prompts/: biometrics_generation.py
mcp-agents/oura-ring-mcp-agent/schemas/: biometrics.py  http.py
mcp-agents/oura-ring-mcp-agent/tools/: get_daily_oura_biometrics.py
mcp-agents/oura_ring_agent/: pyproject.toml
mcp-agents/pubmed_validator_agent/: Dockerfile  Makefile  config.py  example.env  main.py  pyproject.toml
mcp-agents/pubmed_validator_agent/schemas/: http.py
mcp-agents/pubmed_validator_agent/services/: cache.py  pubmed_client.py  validation_service.py
mcp-agents/visit_doctor_agent/: main.py  pyproject.toml
mcp-agents/visit_doctor_agent/prompts/: visit_parser.md
mcp-agents/visit_doctor_agent/schemas/: http.py  visit.py
mcp-agents/visit_doctor_agent/seeds/: seed_clinical_history.py
mcp-agents/visit_doctor_agent/tools/: create_visits_from_prompt.py  delete_visit.py  update_visit.py
(+38 files in other folders)
