[project]
name = "apple-health-mcp-agent"
version = "0.1.0"
description = "MCP agent that exposes Apple HealthKit metrics via a FastMCP tool."
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "langchain-openai>=0.1.0",
    "loguru>=0.7.0",
]

[project.scripts]
apple-health-mcp-agent = "main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
