[project]
name = "pubmed-validator-agent"
version = "0.1.0"
description = "MCP agent that validates AI diagnoses against PubMed medical literature using the NCBI E-Utilities API."
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
]

[project.scripts]
pubmed_validator_agent = "main:run"
inspector = "main:run_inspector"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
